--- a/sass/preicfes/preicfes.scss
+++ b/sass/preicfes/preicfes.scss
@@ -6,9 +6,11 @@
 */
 
 // Variables
-@import "colors/colors";
-@import "mixins/mixins";
+@import "variables/colors/colors";
+@import "variables/mixins/mixins";
 
 // Page Styles
 @import "body/body";
 @import "header/header";
+@import "navbar/navbar";
+@import "parallax_1/parallax_1";
