--- a/sass/preicfes/preicfes.scss
+++ b/sass/preicfes/preicfes.scss
@@ -14,3 +14,9 @@
 @import "header/header";
 @import "navbar/navbar";
 @import "parallax_1/parallax_1";
+@import "objetivos/objetivos";
+@import "evalua/evalua";
+@import "queevalua/queevalua";
+@import "footer/footer";
+@import "footer/footeruno/footeruno";
+@import "footer/footerdos/footerdos";
