--- a/sass/preicfes/variables/colors/_colors.scss
+++ b/sass/preicfes/variables/colors/_colors.scss
@@ -25,6 +25,7 @@ $background: #182A2C !default;
 $background-header: #515e6d !default;
 $background-brands: rgba(#ececec, 0.73) !default;
 $background-location: #e1e1e1 !default;
+$background-default: #fafafa !default;
 
 // Border Colors
 $border-color-navbar: #e7e7e7 !default;
